<resources>
    <string name="app_name">Vinylog</string>

    <!-- Strings del activity login -->
    <string name="bienvenido">Bienvenido a Vinylog</string>
    <string name="login">Login</string>
    <string name="user">Usuario o email</string>
    <string name="pass">Contraseña</string>
    <string name="registrarse">¿No tienes una cuenta? Regístrate.</string>
    <string name="forgot">¿Has olvidado tus credenciales? Obtén ayuda.</string>
    <string name="google_login">Iniciar sesión con Google</string>

    <!--  String de signin.xml layout -->
    <string name="userName">Nombre de usuario</string>
    <string name="pass1">Contraseña</string>
    <string name="pass2">Repetir contraseña</string>
    <string name="mail">Email</string>
    <string name="fechaNac">Fecha de nacimiento</string>
    <string name="bt_registro1">Continuar</string>
    <string name="bt_registro2">Registrarse</string>
    <string name="title_activity_signin">SigninActivity</string>
    <string name="nombre">Nombre real</string>
    <string name="datos_acceso">Empecemos introduciendo \nlos datos de acceso</string>
    <string name="datos_acceso2">Para terminar, \ndanos algo de información de ti</string>
    <string-array name="sp_poblacion">
        <item>Provincia</item>
        <item>A Coruña</item>
        <item>Álava</item>
        <item>Albacete</item>
        <item>Alicante</item>
        <item>Almería</item>
        <item>Asturias</item>
        <item>Ávila</item>
        <item>Badajoz</item>
        <item>Baleares</item>
        <item>Barcelona</item>
        <item>Burgos</item>
        <item>Cáceres</item>
        <item>Cádiz</item>
        <item>Cantabria</item>
        <item>Castellón</item>
        <item>Ceuta</item>
        <item>Ciudad Real</item>
        <item>Córdoba</item>
        <item>Cuenca</item>
        <item>Girona</item>
        <item>Granada</item>
        <item>Guadalajara</item>
        <item>Gipuzkoa</item>
        <item>Huelva</item>
        <item>Huesca</item>
        <item>Jaén</item>
        <item>La Rioja</item>
        <item>Las Palmas</item>
        <item>León</item>
        <item>Lérida</item>
        <item>Lugo</item>
        <item>Madrid</item>
        <item>Málaga</item>
        <item>Melilla</item>
        <item>Murcia</item>
        <item>Navarra</item>
        <item>Ourense</item>
        <item>Palencia</item>
        <item>Pontevedra</item>
        <item>Salamanca</item>
        <item>Segovia</item>
        <item>Sevilla</item>
        <item>Soria</item>
        <item>Tarragona</item>
        <item>Santa Cruz de Tenerife</item>
        <item>Teruel</item>
        <item>Toledo</item>
        <item>Valencia</item>
        <item>Valladolid</item>
        <item>Vizcaya</item>
        <item>Zamora</item>
        <item>Zaragoza</item>
    </string-array>

    <!--  String de ForgotPass.xml layout -->
    <string name="tv_forgot">No te preocupes, \nindícanos tu email y te mandaremos un \ncódigo para que puedas seleccionar una contraseña nueva</string>
    <string name="bt_recovery">Recuperar contraseña</string>
    <string name="bt_cambioPass">Cambiar contraseña</string>
    <string name="et_verificacion">Código de verificación</string>
    <string name="et_passChange1">Nueva contraseña</string>
    <string name="et_passChange2">Repita la nueva contraseña</string>

    <!-- String de los contentDescription -->
    <string name="logo_blank_description">Vinylog</string>
    <string name="feed_blank_description">Feed</string>
    <string name="search_blank_description">Buscador</string>
    <string name="calendar_blank_description">Calendario</string>
    <string name="profile_blank_description">Perfil</string>
    <string name="linear_layout_description">Linear layout</string>
    <string name="profile_pic_description">Foto de perfil</string>
    <string name="user_description">Nombre de usuario</string>
    <string name="btn_menu_description">Menú usuario</string>
    <string name="cover_description">Portada</string>
    <string name="btn_like_description">Like</string>
    <string name="btn_comments_description">Comentarios</string>
    <string name="btn_share_description">Enviar</string>
    <string name="btn_new_review_description">Nueva reseña</string>
    <string name="btn_log_out_description">Cerrar sesión</string>
    <string name="btn_edit_profile_description">Editar perfil</string>
    <string name="btn_check_description">Okay</string>
    <string name="btn_crossed_description">Cancel</string>

    <!-- String de publicacion_feed.xml -->
    <string name="title">Título</string>
    <string name="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
        in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
        sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
        laborum.</string>

    <!-- String de activity_buscador.xml -->
    <string name="et_buscador">Búsqueda</string>
    <string name="bt_destacados">Destacados</string>
    <string name="bt_usuarios">Usuarios</string>
    <string name="bt_temas">Temas</string>
    <string name="bt_discos">Álbumes</string>
    <string name="bt_artistas">Artistas</string>


    <!-- STRING PARA LA URL DE CONEXIÓN -->
    <string name="url_old">http://95.39.184.89/vinyl/</string>
    <string name="url_local_will">http://192.168.1.93/</string>
    <string name="url">http://192.168.1.137/vinylog_backend/</string>

    <!-- String para la vista de Artista -->
    <string name="tv_artista_bio_titulo">Biografía</string>
    <string name="tv_artista_resena_titulo">Reseñas</string>
    <string name="bt_artista_follow">Follow</string>
    <string name="et_artista_resena">Escriba la reseña</string>
    <string name="et_artista_resena_titulo">Escriba el título</string>
    <string name="bt_artista_resena">Escribir Reseña</string>

    <!-- String para la vista de reseña -->
    <string name="tv_resena_comentario_titulo">Comentarios</string>
    <string name="bt_resena_copmentario">Enviar</string>
    <string name="et_resena_comentario">Escribir comentario</string>

    <!-- String para la vista del disco -->
    <string name="tv_disco_descripcion">Descripción</string>

    <!-- Strings para la vista de usuario -->
    <string name="tv_usuario_resena">Reseñas</string>
    <string name="tv_usuario_biografia_titulo">Biografía</string>
    <string name="bt_usuario_mensaje">Mensaje</string>
    <string name="bt_usuario_follow">Follow</string>
    <string name="tv_usuario_resenas_numero">0</string>

    <!-- Strings para la vista del calendario -->
    <string name="tv_calendario_titulo">Próximos eventos de los artistas a los que sigues</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings para la vista del perfil -->
    <string name="tv_num_reviews">5</string>
    <string name="tv_num_followers">240</string>
    <string name="tv_num_followed">16</string>
    <string name="tv_reviews">Reseñas</string>
    <string name="tv_followers">Seguidores</string>
    <string name="tv_followed">Seguidos</string>
    <string name="tv_user">\@usuario</string>
    <string name="tv_name">Nombre</string>
    <string name="tv_bio">Esta es mi biografía. Es algo escueta porque en este espacio cabe lo justo. Máximo 150 caracteres, ya lo digo.</string>
    <string name="btn_song">Canciones</string>
    <string name="btn_album">Álbumes</string>
    <string name="btn_artist">Artistas</string>
    <string name="tv_no_resenas">No hay publicaciones</string>
    <string name="tv_edit_profile_pic">Cambiar foto de perfil</string>
    <string name="et_edit_profile_name">Nombre de perfil</string>
    <string name="et_edit_user_name">Nombre de usuario</string>
    <string name="et_edit_bio">Biografía</string>

</resources>